Nikola auto commit.
Source commit: 0deb42a07a2a2e7b1378f0e5f62243d836ef65c1
Nikola version: 7.8.11

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@ the link in the na">
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>Most people visit my site to browse the Korean translation of C FAQ.  Check
-the link in the navigator, or read from <a href="file:///cfaqs/index.html">here</a>.
+the link in the navigator, or read from <a href="http://www.cinsk.org/cfaqs/index.html">here</a>.
 </li>
 <li>I translated <a href="mailto:david@tribble.com">David R. Tribble</a>'s  <a href="http://david.tribble.com/text/cdiffs.htm">Incompatibilities Between ISO C and ISO C++</a> in
-Korean.  Read from <a href="file:///isoc-diff-iso-c++/index.html">here</a>.
+Korean.  Read from <a href="http://www.cinsk.org/iso-c-diff-iso-c++/index.html">here</a>.
 </li>
 </ul>
 </div>
