--- a/ko/index.html
+++ b/ko/index.html
@@ -127,11 +127,11 @@ and ISO C++를 번역했습니다. ">
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>
-<a href="file:///cfaqs/index.html">C FAQ 한국어 번역판</a>
+<a href="http://www.cinsk.org/cfaqs/index.html">C FAQ 한국어 번역판</a>
 </li>
 <li>
 <a href="mailto:david@tribble.com">David R. Tribble</a>씨의 허락을 받아 <a href="http://david.tribble.com/text/cdiffs.htm">Incompatibilities Between ISO C
-and ISO C++</a>를 번역했습니다.  <a href="file:///isoc-diff-iso-c++/index.html">여기</a>에서 읽으세요.
+and ISO C++</a>를 번역했습니다.  <a href="http://www.cinsk.org/iso-c-diff-iso-c++/index.html">여기</a>에서 읽으세요.
 </li>
 </ul>
 </div>
